force-app/main/default/objects/Channel__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>