force-app/main/default/objects/Channel__c/fields/Channel_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Channel_Ref_No__c</fullName>
    <externalId>true</externalId>
    <label>Channel Ref No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>