force-app/main/default/objects/Channel__c/fields/ChannelNumber__c.field-meta.xml
<CustomField>
    <fullName>ChannelNumber__c</fullName>
    <displayFormat>CN-{0000000000}</displayFormat>
    <label>Channel Number</label>
    <type>AutoNumber</type>
</CustomField>