force-app/main/default/objects/Channel__c/fields/LocationCity__c.field-meta.xml
<CustomField>
    <fullName>LocationCity__c</fullName>
    <label>Location City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>