force-app/main/default/objects/Channel__c/fields/LocationID__c.field-meta.xml
<CustomField>
    <fullName>LocationID__c</fullName>
    <label>Location ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>