force-app/main/default/objects/Channel__c/fields/LocationPostcode__c.field-meta.xml
<CustomField>
    <fullName>LocationPostcode__c</fullName>
    <label>Location Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>