force-app/main/default/objects/Channel__c/fields/LocationState__c.field-meta.xml
<CustomField>
    <fullName>LocationState__c</fullName>
    <label>Location State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>