force-app/main/default/objects/Channel__c/fields/LocationStreet__c.field-meta.xml
<CustomField>
    <fullName>LocationStreet__c</fullName>
    <label>Location Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>