force-app/main/default/objects/Channel__c/fields/MC_MY_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_MY_Sync_Eligibility__c</fullName>
    <formula>ispickval(Market__c,&apos;MY&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC MY Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>