force-app/main/default/objects/Channel__c/fields/OutletName__c.field-meta.xml
<CustomField>
    <fullName>OutletName__c</fullName>
    <label>Outlet Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>