force-app/main/default/objects/Channel__c/fields/OutletType__c.field-meta.xml
<CustomField>
    <fullName>OutletType__c</fullName>
    <label>Outlet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aged Care</fullName>
            </value>
            <value>
                <fullName>HTO</fullName>
            </value>
            <value>
                <fullName>LSM</fullName>
            </value>
            <value>
                <fullName>CMH</fullName>
            </value>
            <value>
                <fullName>Babystores</fullName>
            </value>
            <value>
                <fullName>Event/Roadshow</fullName>
            </value>
            <value>
                <fullName>Private Hospital</fullName>
            </value>
            <value>
                <fullName>Government Hospital</fullName>
            </value>
            <value>
                <fullName>Paeds clinic</fullName>
            </value>
            <value>
                <fullName>GP Clinic</fullName>
            </value>
            <value>
                <fullName>O&amp;G Centre</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Polyclinic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>