force-app/main/default/objects/Channel__c/fields/ParentChannel__c.field-meta.xml
<CustomField>
    <fullName>ParentChannel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Channels</relationshipLabel>
    <relationshipName>Channels</relationshipName>
    <type>Lookup</type>
</CustomField>