force-app/main/default/objects/Channel__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Priority indicator for Parent Channels only.</inlineHelpText>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>