force-app/main/default/objects/Channel__c/fields/Priority_Formula__c.field-meta.xml
<CustomField>
    <fullName>Priority_Formula__c</fullName>
    <formula>ParentChannel__r.Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>