force-app/main/default/objects/Channel__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Website</fullName>
            </value>
            <value>
                <fullName>Campaign Website</fullName>
            </value>
            <value>
                <fullName>Corporate Website</fullName>
            </value>
            <value>
                <fullName>Web - Others</fullName>
            </value>
            <value>
                <fullName>Modern</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Trade - Others</fullName>
            </value>
            <value>
                <fullName>Hospital/Clinic</fullName>
                <label>Hospital</label>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Ethical - Others</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Social - Others</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>Drug Store</fullName>
            </value>
            <value>
                <fullName>EC</fullName>
            </value>
            <value>
                <fullName>Ethical</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>MMC</fullName>
            </value>
            <value>
                <fullName>PX</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>MKT - Others</fullName>
                <isActive>false</isActive>
                <label>MKT - Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>