force-app/main/default/objects/Channel__c/recordTypes/Ethical.recordType-meta.xml
<RecordType>
    <fullName>Ethical</fullName>
    <active>true</active>
    <label>Ethical</label>
</RecordType>