force-app/main/default/objects/Channel__c/recordTypes/MKT.recordType-meta.xml
<RecordType>
    <fullName>MKT</fullName>
    <active>true</active>
    <label>MKT</label>
</RecordType>