force-app/main/default/objects/Channel__c/recordTypes/MMC.recordType-meta.xml
<RecordType>
    <fullName>MMC</fullName>
    <active>true</active>
    <label>MMC</label>
</RecordType>