force-app/main/default/objects/Channel__c/recordTypes/OtherOffline.recordType-meta.xml
<RecordType>
    <fullName>OtherOffline</fullName>
    <active>true</active>
    <label>Other - Offline</label>
</RecordType>