force-app/main/default/objects/Channel__c/recordTypes/OtherOnline.recordType-meta.xml
<RecordType>
    <fullName>OtherOnline</fullName>
    <active>true</active>
    <label>Other - Online</label>
</RecordType>