force-app/main/default/objects/Channel__c/recordTypes/Social.recordType-meta.xml
<RecordType>
    <fullName>Social</fullName>
    <active>true</active>
    <label>Social</label>
</RecordType>