force-app/main/default/objects/Channel__c/recordTypes/Web.recordType-meta.xml
<RecordType>
    <fullName>Web</fullName>
    <active>true</active>
    <label>Web</label>
</RecordType>